# gitops-agent

./: LICENSE  README.md  install.sh  pyproject.toml
git_agent/: __init__.py  agent.py
gitops_agent/: __init__.py  agent.py  git_operations.py
setup/: git-agent.service  gitops-agent.service
setup/sample_config_git_repo/infra_name/: infra_meta.toml
setup/templates/: config.toml
tests/: conftest.py  test_config_files.py  test_dedup.py  test_integration_dedup.py  test_integration_health.py  test_integration_monitoring.py  test_integration_multifile.py  test_integration_trim.py
